# blinkd

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  blink.c  blink.dbk  blinkd.c  blinkd.dbk  blinkd.h  config.h.in  configure  configure.ac
debian/: changelog  control  copyright  default  dirs  index.html.tmp  init  rules
examples/: index.html.tmp  new_fax  standard.tcl
po/: POTFILES.in  de.po  index.html.tmp  sv.po
